--- a/core/templates/core/changeorder_signature_form.html
+++ b/core/templates/core/changeorder_signature_form.html
@@ -325,6 +325,11 @@
             </div>
             
             <div class="card-body">
+                <!-- CO Title & ID -->
+                {% if changeorder.co_title %}
+                <h2 class="text-xl font-semibold text-gray-800 mb-3">{{ changeorder.co_title }}</h2>
+                {% endif %}
+                
                 <div class="co-badge">
                     <i class="fas fa-hashtag"></i>
                     CO-{{ changeorder.id }}
