fix: Change block name from extra_head to extra_css for Budget Wizard styles

--- a/core/templates/core/budget_wizard.html
+++ b/core/templates/core/budget_wizard.html
@@ -3,7 +3,7 @@
 
 {% block title %}{% trans "Budget Planner" %} - {{ project.name }}{% endblock %}
 
-{% block extra_head %}
+{% block extra_css %}
 <style>
 :root {
     --bw-primary: #6366f1;
